<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/crowdFlower">

    <LinearLayout
        android:id="@+id/CongratsText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/End_text"
            android:fontFamily="@font/font_"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/chronoInfo"
                android:fontFamily="@font/font_"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/ChronoScore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:name="com.example.project.ChronoFragment">
            </androidx.fragment.app.FragmentContainerView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:background="@drawable/border">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ScoreBoardHead_username"
                android:fontFamily="@font/font_"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAlignment="center">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ScoreBoardHead_Score"
                android:fontFamily="@font/font_"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAlignment="center">
            </TextView>
        </LinearLayout>

        <TableLayout
            android:id="@+id/ScoreBoard"
            android:name="com.example.project.ScoreBoardFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/RestartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:background="@drawable/restart">
            </ImageButton>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/restart"
            android:fontFamily="@font/font_"
                android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center">
        </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home"
                android:layout_weight="0.3"
                android:layout_gravity="center">
            </ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back_home"
                android:textColor="@color/black"
                android:fontFamily="@font/font_"
                android:textSize="20sp"
                android:textAlignment="center">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>